# vzor

./: .gitignore  CMakeLists.txt  LICENCE  README.md  conanfile.py
common/load_file/: CMakeLists.txt  load_file.cpp  load_file.hpp
docs/: CMakeLists.txt
examples/: CMakeLists.txt  print_size.cpp
examples/example1/: CMakeLists.txt  main.cpp
include/vzor/: basic_image.hpp  config.hpp  decode_image.hpp  image.hpp  pixel_traits.hpp  rgba.hpp
include/vzor/detail/: allocator.hpp  any_allocator.hpp  load_image_from_memory.hpp  pixel_traits.hpp
loader/: CMakeLists.txt  loader.cpp  loader.hpp
src/: any_allocator.cpp  decode_image.cpp
src/detail/: allocator.cpp  decode_image_impl.cpp  load_image_from_memory.cpp  stb_image_impl.cpp
test/: CMakeLists.txt  test_decode.cpp
tests/: CMakeLists.txt  test_decode.cpp
